# rqldb

./: Cargo.toml  LICENSE  README.md
db/: Cargo.toml
db/benches/: bench.rs
db/src/: bytes.rs  db.rs  debug.rs  dsl.rs  dump.rs  event.rs  heap.rs  idmap.rs  index.rs  index2.rs  interpret.rs  lib.rs  mapper.rs  object.rs  page.rs  parse.rs  plan.rs  schema.rs  select.rs  tokenize.rs  transaction.rs  tuple.rs  tuple_set.rs
db/src/database/: db.rs  define.rs  insert.rs  mod.rs  obj_view.rs
db/src/page/: mod.rs  tuple_id.rs
db/src/test/: db_ext.rs  fixture.rs  gen.rs  mod.rs
db/tests/: example_test.rs  integration_test.rs
examples/: example.query
import/: Cargo.toml
import/src/: import.rs  main.rs
live-storage/: Cargo.toml
live-storage/examples/: largedb.rs
live-storage/src/: heap.rs  lib.rs  page.rs  schema.rs  test_util.rs
persist/: Cargo.toml
persist/benches/: bench.rs
persist/examples/: largedb.rs
persist/src/: lib.rs  object.rs  schema.rs
shell/: Cargo.toml
shell/src/: main.rs  print.rs  shell.rs  table.rs
src/: create.rs  db.rs  main.rs  parse.rs  query.rs  schema.rs  select.rs
