[workspace]
resolver = "2"
members = [
        "db",
        "shell",
        "live-storage",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Experimental, purely relational database"
authors = ["Artur Pawelczyk"]
license = "MIT"
repository = "https://github.com/artur-pawelczyk/rqldb/"
