[package]
name = "rqldb-live-storage"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rqldb = { path = "../db" }
bson = "3.1.0"
serde = { workspace = true }

[dev-dependencies]
tempfile = "3.10.1"
