[package]
name = "rqldb-shell"
authros.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rqldb = { path = "../db" }
rqldb-live-storage = { path = "../live-storage/" }
rustyline = "9.1.2"
clap = { version = "3.2.25", features = ["derive"] }
